Добавлена маска для ввода телефона

--- a/src/index.html
+++ b/src/index.html
@@ -9,31 +9,39 @@
     <link rel="apple-touch-icon" href="/favic.png" />
     <link rel="manifest" href="/manifest.json" />
     <title>Доставка пиццы в Гатчине 🍕 - Заказать пиццу с доставкой на дом в пиццерии</title>
-    <meta name="description" content="Доставка пиццы на дом в Гатчине и Гатчинском районе официальный сайт Finger Food. Заказать пиццу с бесплатной доставкой по номеру : +7 (921) 632 0 626" />
-    <meta name="keywords" content="доставка пиццы, заказать пиццу, пиццерия, бесплатная доставка, гатчина, гатчинский район, верево" />
-    <link href="/static/css/main.9063b0a2.chunk.css" rel="stylesheet">
+    <meta name="description"
+          content="Доставка пиццы на дом в Гатчине и Гатчинском районе официальный сайт Finger Food. Заказать пиццу с бесплатной доставкой по номеру : +7 (921) 632 0 626" />
+    <meta name="keywords"
+          content="доставка пиццы, заказать пиццу, пиццерия, бесплатная доставка, гатчина, гатчинский район, верево" />
 </head>
 
-<body><noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <script>!function (e) { function r(r) { for (var n, l, i = r[0], f = r[1], a = r[2], c = 0, s = []; c < i.length; c++)l = i[c], Object.prototype.hasOwnProperty.call(o, l) && o[l] && s.push(o[l][0]), o[l] = 0; for (n in f) Object.prototype.hasOwnProperty.call(f, n) && (e[n] = f[n]); for (p && p(r); s.length;)s.shift()(); return u.push.apply(u, a || []), t() } function t() { for (var e, r = 0; r < u.length; r++) { for (var t = u[r], n = !0, i = 1; i < t.length; i++) { var f = t[i]; 0 !== o[f] && (n = !1) } n && (u.splice(r--, 1), e = l(l.s = t[0])) } return e } var n = {}, o = { 1: 0 }, u = []; function l(r) { if (n[r]) return n[r].exports; var t = n[r] = { i: r, l: !1, exports: {} }; return e[r].call(t.exports, t, t.exports, l), t.l = !0, t.exports } l.m = e, l.c = n, l.d = function (e, r, t) { l.o(e, r) || Object.defineProperty(e, r, { enumerable: !0, get: t }) }, l.r = function (e) { "undefined" != typeof Symbol && Symbol.toStringTag && Object.defineProperty(e, Symbol.toStringTag, { value: "Module" }), Object.defineProperty(e, "__esModule", { value: !0 }) }, l.t = function (e, r) { if (1 & r && (e = l(e)), 8 & r) return e; if (4 & r && "object" == typeof e && e && e.__esModule) return e; var t = Object.create(null); if (l.r(t), Object.defineProperty(t, "default", { enumerable: !0, value: e }), 2 & r && "string" != typeof e) for (var n in e) l.d(t, n, function (r) { return e[r] }.bind(null, n)); return t }, l.n = function (e) { var r = e && e.__esModule ? function () { return e.default } : function () { return e }; return l.d(r, "a", r), r }, l.o = function (e, r) { return Object.prototype.hasOwnProperty.call(e, r) }, l.p = "/"; var i = this.webpackJsonpdelivery = this.webpackJsonpdelivery || [], f = i.push.bind(i); i.push = r, i = i.slice(); for (var a = 0; a < i.length; a++)r(i[a]); var p = f; t() }([])</script>
-    <script src="/static/js/2.2b7b99e5.chunk.js"></script>
-    <script src="/static/js/main.47217615.chunk.js"></script>
-        <!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
- 
-    ym(68659888, "init", {
-         clickmap:true,
-         trackLinks:true,
-         accurateTrackBounce:true,
-         webvisor:true
-    });
- </script>
- <noscript><div><img src="https://mc.yandex.ru/watch/68659888" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
- <!-- /Yandex.Metrika counter -->
-</body>
+<body>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root"></div>
+<script>
+  (function(m, e, t, r, i, k, a) {
+    m[i] =
+      m[i] ||
+      function() {
+        (m[i].a = m[i].a || []).push(arguments);
+      };
+    m[i].l = 1 * new Date();
+    (k = e.createElement(t)),
+      (a = e.getElementsByTagName(t)[0]),
+      (k.async = 1),
+      (k.src = r),
+      a.parentNode.insertBefore(k, a);
+  })(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
+  window.ym(68659888, "init", {
+    clickmap: true,
+    trackLinks: true,
+    accurateTrackBounce: true,
+    webvisor: true
+  });
+</script>
+<noscript>
+    <div><img src="https://mc.yandex.ru/watch/68659888" style="position:absolute; left:-9999px;" alt="" /></div>
+</noscript>
+</body>
 </html>
