--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,12 @@
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="/favic.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Доставка пиццы в Гатчине 🍕 - Заказать пиццу с доставкой на дом в пиццерии</title>
+    <title>Пицца в Гатчине - Заказать пиццу с доставкой на дом в пиццерии</title>
+    <meta name="robots" content="index, follow" />
     <meta name="description"
-          content="Доставка пиццы на дом в Гатчине и Гатчинском районе официальный сайт Finger Food. Заказать пиццу с бесплатной доставкой по номеру : +7 (921) 632 0 626" />
+          content="Доставка пиццы на дом в Гатчине 🍕 и Гатчинском районе официальный сайт Finger Food. Заказать пиццу с бесплатной доставкой по номеру : +7 (921) 632 0 626" />
     <meta name="keywords"
-          content="доставка пиццы, заказать пиццу, пиццерия, бесплатная доставка, гатчина, гатчинский район, верево" />
+          content="пицца гатчина, доставка пиццы, заказать пиццу, пиццерия, бесплатная доставка, гатчина, гатчинский район, верево" />
 </head>
 
 <body>
